# Corobot

./: .gitignore  README.md
corobot/: package.xml
corobot_demos/: CMakeLists.txt  package.xml
corobot_demos/config/: poses.yaml
corobot_demos/launch/: sign.launch
corobot_demos/scripts/: pick.py  sign.py
corobot_description/: CMakeLists.txt  package.xml
corobot_description/urdf/: corobot.gazebo  corobot.urdf.xacro
corobot_driver/: CMakeLists.txt  package.xml
corobot_driver/config/: arm.yaml  controller_config.yaml
corobot_driver/launch/: arm.launch  base.launch  corobot_driver.launch
corobot_driver/src/: corobot_driver.cpp
corobot_launch/: CMakeLists.txt  package.xml
corobot_launch/launch/: corobot.launch  explore.launch  slam.launch
corobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
corobot_moveit_config/config/: .controllers.yaml.swp  .kinematics.yaml.swp  controllers.yaml  corobot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
corobot_moveit_config/launch/: .corobot_moveit.launch.swp  corobot_moveit.launch  corobot_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
laser_segmentation/: CMakeLists.txt  package.xml
laser_segmentation/launch/: laser_assembler.launch
laser_segmentation/scripts/: cloud_publisher.py
laser_segmentation/src/: laser_segmentation.cpp
