<?xml version="1.0"?>
<package>
  <name>corobot_launch</name>
  <version>1.0.0</version>
  <description>The corobot_launch package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
