<?xml version="1.0"?>
<package>
  <name>laser_segmentation</name>
  <version>0.0.0</version>
  <description>The laser_segmentation package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export></export>
</package>
